@@ -166,7 +166,7 @@ public:
       TEX_MIRROR = D3DTADDRESS_MIRROR
    };
 
-   RenderDevice(const HWND hwnd, const int width, const int height, const bool fullscreen, const int colordepth, int &refreshrate, int VSync, const bool useAA, const bool stereo3D, const bool FXAA);
+   RenderDevice(const HWND hwnd, const int width, const int height, const bool fullscreen, const int colordepth, int &refreshrate, int VSync, const bool useAA, const bool stereo3D, const bool FXAA, const bool useNvidiaApi);
    ~RenderDevice();
 
    void BeginScene();
@@ -303,6 +303,8 @@ private:
    //bool m_RESZ_support;
    bool m_force_aniso;
    bool m_compress_textures;
+   static bool m_useNvidiaApi;
+   static bool m_INTZ_support;
 
 public:
    // performance counters
